# sdk-py

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  python-publish.yml  python-testing.yml
docs/: README.md  api.md  boostrap.md  certs.md  channels.md  errors.md  groups.md  index.md  keys.md  messages.md  response.md  sdk.md  things.md  users.md  utils.md
examples/: examples.py
functions/: channels.py  examples.py  groups.py  messages.py  sdk.py  things.py  users.py
lib/: api.py  channels.py  errors.py  examples.py  groups.py  messages.py  response.py  sdk.py  things.py  users.py
mainflux/: boostrap.py  certs.py  channels.py  errors.py  groups.py  keys.py  messages.py  response.py  sdk.py  things.py  users.py  utils.py
tests/: test_api.py  test_bootstrap.py  test_certs.py  test_channels.py  test_groups.py  test_keys.py  test_messages.py  test_things.py  test_users.py  test_version.py
