[metadata]
name = Mainflux
version = 0.0.1
author = Filip Bugarski
author_email = filipbugarski@gmail.com
description = Python sdk package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mainflux/mainflux/tree/master/pkg/sdk/python
project_urls =
    Bug Tracker = https://github.com/mainflux/mainflux/tree/master/pkg/sdk/python
classifiers =
    Programming Language :: Python :: 3.8.5
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
